--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ic-use-siwe-identity",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "React hook and context provider for easy frontend integration with SIWE enabled Internet Computer canisters.",
   "author": "Kristofer Lund <kristofer@kristoferlund.se>",
   "repository": {
@@ -32,10 +32,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "peerDependencies": {
-    "@dfinity/agent": "^1.4.0",
-    "@dfinity/candid": "^1.4.0",
-    "@dfinity/identity": "^1.4.0",
-    "@dfinity/principal": "^1.4.0",
+    "@dfinity/agent": ">=1.4.0",
+    "@dfinity/candid": ">=1.4.0",
+    "@dfinity/identity": ">=1.4.0",
+    "@dfinity/principal": ">=1.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "viem": "^2.18.0",
