--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ic-use-siwe-identity",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "React hook and context provider for easy frontend integration with SIWE enabled Internet Computer canisters.",
   "author": "Kristofer Lund <kristofer@kristoferlund.se>",
   "repository": {
@@ -21,7 +21,10 @@
   ],
   "license": "MIT",
   "type": "module",
-  "main": "dist/index.js",
+  "exports": {
+    ".": "./dist/index.js",
+    "./react": "./dist/react/index.js"
+  },
   "scripts": {
     "build": "rm -rf dist && node build.js && tsc --emitDeclarationOnly",
     "clean": "rm -rf dist",
@@ -32,14 +35,21 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "peerDependencies": {
-    "@dfinity/agent": ">=1.4.0",
-    "@dfinity/candid": ">=1.4.0",
-    "@dfinity/identity": ">=1.4.0",
-    "@dfinity/principal": ">=1.4.0",
+    "@dfinity/agent": ">=2.1.2",
+    "@dfinity/candid": ">=2.1.1",
+    "@dfinity/identity": ">=2.1.2",
+    "@dfinity/principal": ">=2.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "viem": "^2.18.0",
-    "wagmi": "^2.10.0"
+    "viem": "^2.22.7"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    },
+    "react-dom": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -55,5 +65,9 @@
     "react-dom": "^18.3.1",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.1"
+  },
+  "dependencies": {
+    "@xstate/store": "^2.6.2",
+    "wagmi": "^2.14.7"
   }
 }
